<resources>
    <string name="app_name">segundaApp</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario_et">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="sumar_bt">Sumar</string>
    <string name="restar_bt">Restar</string>
    <string name="zoomPositivo_bt" translatable="false">Zoom+</string>
    <string name="zoomNegativo_bt" translatable="false">Zoom-</string>
    <string name="ocultar_bt">Ocultar</string>
    <string name="resetear_bt">Resetear</string>
    <string name="conversorMonedasText">Conversor de monedas</string>
    <string name="ingresarMontoPesosText">Ingresar monto en pesos</string>
    <string name="seleccioneMonedaText">Seleccione una moneda</string>
    <string name="dolar_eeuu_Text">Dolar (USA)</string>
    <string name="real_br_Text">Real (Brasil)</string>
    <string name="euroText">Euro</string>
    <string name="resultadoText">Resultado</string>
    <string name="convertir_bt">Convertir</string>
    <string name="reiniciar_bt">Reiniciar</string>
    <string name="imagengatito" translatable="false">imagenGatito</string>
    <string name="sumaActivity_bt">Pantalla de suma</string>
    <string name="ConversorActivity_bt">Conversor de monedas</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="telefono_bt">Telefono</string>
    <string name="gmail_bt">Gmail</string>
    <string name="github_bt">Github</string>
    <string name="ContactActivity_bt">Contactos</string>
</resources>