<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/gatitoIMG"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imagengatito"
        android:src="@drawable/gatito_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sumaActivity_bt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sumaActivity_bt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/gatitoIMG"
        app:layout_constraintStart_toStartOf="@+id/gatitoIMG"
        app:layout_constraintTop_toBottomOf="@+id/gatitoIMG" />

    <Button
        android:id="@+id/ConversorActivity_bt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ConversorActivity_bt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/sumaActivity_bt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sumaActivity_bt"
        app:layout_constraintTop_toBottomOf="@+id/sumaActivity_bt" />

</androidx.constraintlayout.widget.ConstraintLayout>