<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guiaDerecha"
        app:layout_constraintStart_toStartOf="@+id/guiaIzquierda"
        app:layout_constraintTop_toTopOf="@id/guiaSuperior"
        app:layout_goneMarginTop="35dp"
        android:id="@+id/SobreNosotros"
        android:text="@string/sobre_nosotros"
        android:textSize="36dp"
        android:textAlignment="center"
    />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/SobreNosotros"
        app:layout_constraintStart_toStartOf="@+id/SobreNosotros"
        app:layout_constraintEnd_toEndOf="@id/SobreNosotros"
        android:id="@+id/TelefonoButton"
        android:layout_marginTop="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/telefono_bt"
        android:textSize="18sp"
    />
    <Button
        app:layout_constraintTop_toBottomOf="@+id/TelefonoButton"
        app:layout_constraintStart_toStartOf="@+id/TelefonoButton"
        app:layout_constraintEnd_toEndOf="@id/TelefonoButton"
        android:id="@+id/GmailButton"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/gmail_bt"
        android:textSize="18sp"
    />
    <Button
        app:layout_constraintTop_toBottomOf="@+id/GmailButton"
        app:layout_constraintStart_toStartOf="@+id/GmailButton"
        app:layout_constraintEnd_toEndOf="@id/GmailButton"
        android:id="@+id/GithubButton"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/github_bt"
        android:textSize="18sp"
    />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaInferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaSuperior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>